package org.example;

public interface UserAction {
    void showMenu();
}
